--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: shree-raga-swaad-ghar-api
     env: node
     buildCommand: npm install
-    startCommand: node server.js
+    startCommand: npm start
     plan: free
     healthCheckPath: /api/health
     envVars:
